// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step should handle onClick 1`] = `
<DocumentFragment>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: #0068ef;
  font-weight: 700;
  font-size: 14px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  border-radius: 9999px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
  margin-right: 32px;
}

.c1:hover {
  background-color: #049;
  color: #fff;
}

.c1:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c1:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: pointer;
  padding: 0;
  font-weight: unset;
}

.c2:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <div
        class="c3"
      >
        <div
          aria-selected="true"
          class="c4"
          color="primary"
          font-size="1"
        >
          Step
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render a completed step correctly 1`] = `
<DocumentFragment>
  .c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  color: #0068ef;
  margin-right: 4px;
  width: 16px;
}

.c5 {
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  color: #0068ef;
  font-size: 14px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  border-radius: 9999px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
  margin-right: 32px;
}

.c1:hover {
  background-color: #049;
  color: #fff;
}

.c1:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c1:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c2:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <div
        class="c3"
      >
        <svg
          aria-hidden="false"
          aria-label="Step Completed"
          class="c4 c5"
          color="primary"
          fill="currentcolor"
          focusable="false"
          height="16"
          role="img"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.6 15.6l-4.2-4.2L3 12.8l5.6 5.6 12-12L19.2 5 8.6 15.6z"
          />
        </svg>
        <div
          aria-selected="false"
          class="c6"
          color="primary"
          font-size="1"
        >
          Step
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render a step that is "active" and "completed" correctly 1`] = `
<DocumentFragment>
  .c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  color: #0068ef;
  margin-right: 4px;
  width: 16px;
}

.c5 {
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  color: #0068ef;
  font-weight: 700;
  font-size: 14px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  border-radius: 9999px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
  margin-right: 32px;
}

.c1:hover {
  background-color: #049;
  color: #fff;
}

.c1:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c1:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c2:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <div
        class="c3"
      >
        <svg
          aria-hidden="false"
          aria-label="Step Completed"
          class="c4 c5"
          color="primary"
          fill="currentcolor"
          focusable="false"
          height="16"
          role="img"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.6 15.6l-4.2-4.2L3 12.8l5.6 5.6 12-12L19.2 5 8.6 15.6z"
          />
        </svg>
        <div
          aria-selected="true"
          class="c6"
          color="primary"
          font-size="1"
        >
          Step
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render an active step correctly 1`] = `
<DocumentFragment>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: #0068ef;
  font-weight: 700;
  font-size: 14px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  border-radius: 9999px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
  margin-right: 32px;
}

.c1:hover {
  background-color: #049;
  color: #fff;
}

.c1:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c1:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c2:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
      data-testid="Step"
    >
      <div
        class="c3"
      >
        <div
          aria-selected="true"
          class="c4"
          color="primary"
          font-size="1"
        >
          Step
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Step should render correctly with no props without throwing 1`] = `
<DocumentFragment>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: #4f6f8f;
  font-size: 14px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  border-radius: 9999px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
  margin-right: 32px;
}

.c1:hover {
  background-color: #049;
  color: #fff;
}

.c1:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c1:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  cursor: default;
  padding: 0;
  font-weight: unset;
}

.c2:hover {
  background-color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <button
      class="c1 c2"
      color="primary"
    >
      <div
        class="c3"
      >
        <div
          aria-selected="false"
          class="c4"
          color="text.light"
          font-size="1"
        >
          Step
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
